CSC-466 Language Processing/A5/v3/prepos.output
State 1 conflicts: 1 shift/reduce
State 18 conflicts: 6 shift/reduce
State 19 conflicts: 6 shift/reduce
State 20 conflicts: 6 shift/reduce
State 21 conflicts: 6 shift/reduce
State 22 conflicts: 6 shift/reduce
State 23 conflicts: 6 shift/reduce


Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input line

    3 line: '\n'
    4     | expression '\n'

    5 expression: %empty
    6           | expression '+' expression
    7           | expression '-' expression
    8           | expression '*' expression
    9           | expression '/' expression
   10           | expression '%' expression
   11           | expression '^' expression
   12           | '(' expression ')'
   13           | factor

   14 factor: NUMBER


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3 4
'%' (37) 10
'(' (40) 12
')' (41) 12
'*' (42) 8
'+' (43) 6
'-' (45) 7
'/' (47) 9
'^' (94) 11
error (256)
NUMBER (258) 14


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
input (14)
    on left: 1 2, on right: 0 2
line (15)
    on left: 3 4, on right: 2
expression (16)
    on left: 5 6 7 8 9 10 11 12 13, on right: 4 6 7 8 9 10 11 12
factor (17)
    on left: 14, on right: 13


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . line

    $end    shift, and go to state 2
    NUMBER  shift, and go to state 3
    '\n'    shift, and go to state 4
    '('     shift, and go to state 5

    '\n'      [reduce using rule 5 (expression)]
    $default  reduce using rule 5 (expression)

    line        go to state 6
    expression  go to state 7
    factor      go to state 8


State 2

    0 $accept: input $end .

    $default  accept


State 3

   14 factor: NUMBER .

    $default  reduce using rule 14 (factor)


State 4

    3 line: '\n' .

    $default  reduce using rule 3 (line)


State 5

   12 expression: '(' . expression ')'

    NUMBER  shift, and go to state 3
    '('     shift, and go to state 5

    $default  reduce using rule 5 (expression)

    expression  go to state 9
    factor      go to state 8


State 6

    2 input: input line .

    $default  reduce using rule 2 (input)


State 7

    4 line: expression . '\n'
    6 expression: expression . '+' expression
    7           | expression . '-' expression
    8           | expression . '*' expression
    9           | expression . '/' expression
   10           | expression . '%' expression
   11           | expression . '^' expression

    '\n'  shift, and go to state 10
    '+'   shift, and go to state 11
    '-'   shift, and go to state 12
    '*'   shift, and go to state 13
    '/'   shift, and go to state 14
    '%'   shift, and go to state 15
    '^'   shift, and go to state 16


State 8

   13 expression: factor .

    $default  reduce using rule 13 (expression)


State 9

    6 expression: expression . '+' expression
    7           | expression . '-' expression
    8           | expression . '*' expression
    9           | expression . '/' expression
   10           | expression . '%' expression
   11           | expression . '^' expression
   12           | '(' expression . ')'

    '+'  shift, and go to state 11
    '-'  shift, and go to state 12
    '*'  shift, and go to state 13
    '/'  shift, and go to state 14
    '%'  shift, and go to state 15
    '^'  shift, and go to state 16
    ')'  shift, and go to state 17


State 10

    4 line: expression '\n' .

    $default  reduce using rule 4 (line)


State 11

    6 expression: expression '+' . expression

    NUMBER  shift, and go to state 3
    '('     shift, and go to state 5

    $default  reduce using rule 5 (expression)

    expression  go to state 18
    factor      go to state 8


State 12

    7 expression: expression '-' . expression

    NUMBER  shift, and go to state 3
    '('     shift, and go to state 5

    $default  reduce using rule 5 (expression)

    expression  go to state 19
    factor      go to state 8


State 13

    8 expression: expression '*' . expression

    NUMBER  shift, and go to state 3
    '('     shift, and go to state 5

    $default  reduce using rule 5 (expression)

    expression  go to state 20
    factor      go to state 8


State 14

    9 expression: expression '/' . expression

    NUMBER  shift, and go to state 3
    '('     shift, and go to state 5

    $default  reduce using rule 5 (expression)

    expression  go to state 21
    factor      go to state 8


State 15

   10 expression: expression '%' . expression

    NUMBER  shift, and go to state 3
    '('     shift, and go to state 5

    $default  reduce using rule 5 (expression)

    expression  go to state 22
    factor      go to state 8


State 16

   11 expression: expression '^' . expression

    NUMBER  shift, and go to state 3
    '('     shift, and go to state 5

    $default  reduce using rule 5 (expression)

    expression  go to state 23
    factor      go to state 8


State 17

   12 expression: '(' expression ')' .

    $default  reduce using rule 12 (expression)


State 18

    6 expression: expression . '+' expression
    6           | expression '+' expression .
    7           | expression . '-' expression
    8           | expression . '*' expression
    9           | expression . '/' expression
   10           | expression . '%' expression
   11           | expression . '^' expression

    '+'  shift, and go to state 11
    '-'  shift, and go to state 12
    '*'  shift, and go to state 13
    '/'  shift, and go to state 14
    '%'  shift, and go to state 15
    '^'  shift, and go to state 16

    '+'       [reduce using rule 6 (expression)]
    '-'       [reduce using rule 6 (expression)]
    '*'       [reduce using rule 6 (expression)]
    '/'       [reduce using rule 6 (expression)]
    '%'       [reduce using rule 6 (expression)]
    '^'       [reduce using rule 6 (expression)]
    $default  reduce using rule 6 (expression)


State 19

    6 expression: expression . '+' expression
    7           | expression . '-' expression
    7           | expression '-' expression .
    8           | expression . '*' expression
    9           | expression . '/' expression
   10           | expression . '%' expression
   11           | expression . '^' expression

    '+'  shift, and go to state 11
    '-'  shift, and go to state 12
    '*'  shift, and go to state 13
    '/'  shift, and go to state 14
    '%'  shift, and go to state 15
    '^'  shift, and go to state 16

    '+'       [reduce using rule 7 (expression)]
    '-'       [reduce using rule 7 (expression)]
    '*'       [reduce using rule 7 (expression)]
    '/'       [reduce using rule 7 (expression)]
    '%'       [reduce using rule 7 (expression)]
    '^'       [reduce using rule 7 (expression)]
    $default  reduce using rule 7 (expression)


State 20

    6 expression: expression . '+' expression
    7           | expression . '-' expression
    8           | expression . '*' expression
    8           | expression '*' expression .
    9           | expression . '/' expression
   10           | expression . '%' expression
   11           | expression . '^' expression

    '+'  shift, and go to state 11
    '-'  shift, and go to state 12
    '*'  shift, and go to state 13
    '/'  shift, and go to state 14
    '%'  shift, and go to state 15
    '^'  shift, and go to state 16

    '+'       [reduce using rule 8 (expression)]
    '-'       [reduce using rule 8 (expression)]
    '*'       [reduce using rule 8 (expression)]
    '/'       [reduce using rule 8 (expression)]
    '%'       [reduce using rule 8 (expression)]
    '^'       [reduce using rule 8 (expression)]
    $default  reduce using rule 8 (expression)


State 21

    6 expression: expression . '+' expression
    7           | expression . '-' expression
    8           | expression . '*' expression
    9           | expression . '/' expression
    9           | expression '/' expression .
   10           | expression . '%' expression
   11           | expression . '^' expression

    '+'  shift, and go to state 11
    '-'  shift, and go to state 12
    '*'  shift, and go to state 13
    '/'  shift, and go to state 14
    '%'  shift, and go to state 15
    '^'  shift, and go to state 16

    '+'       [reduce using rule 9 (expression)]
    '-'       [reduce using rule 9 (expression)]
    '*'       [reduce using rule 9 (expression)]
    '/'       [reduce using rule 9 (expression)]
    '%'       [reduce using rule 9 (expression)]
    '^'       [reduce using rule 9 (expression)]
    $default  reduce using rule 9 (expression)


State 22

    6 expression: expression . '+' expression
    7           | expression . '-' expression
    8           | expression . '*' expression
    9           | expression . '/' expression
   10           | expression . '%' expression
   10           | expression '%' expression .
   11           | expression . '^' expression

    '+'  shift, and go to state 11
    '-'  shift, and go to state 12
    '*'  shift, and go to state 13
    '/'  shift, and go to state 14
    '%'  shift, and go to state 15
    '^'  shift, and go to state 16

    '+'       [reduce using rule 10 (expression)]
    '-'       [reduce using rule 10 (expression)]
    '*'       [reduce using rule 10 (expression)]
    '/'       [reduce using rule 10 (expression)]
    '%'       [reduce using rule 10 (expression)]
    '^'       [reduce using rule 10 (expression)]
    $default  reduce using rule 10 (expression)


State 23

    6 expression: expression . '+' expression
    7           | expression . '-' expression
    8           | expression . '*' expression
    9           | expression . '/' expression
   10           | expression . '%' expression
   11           | expression . '^' expression
   11           | expression '^' expression .

    '+'  shift, and go to state 11
    '-'  shift, and go to state 12
    '*'  shift, and go to state 13
    '/'  shift, and go to state 14
    '%'  shift, and go to state 15
    '^'  shift, and go to state 16

    '+'       [reduce using rule 11 (expression)]
    '-'       [reduce using rule 11 (expression)]
    '*'       [reduce using rule 11 (expression)]
    '/'       [reduce using rule 11 (expression)]
    '%'       [reduce using rule 11 (expression)]
    '^'       [reduce using rule 11 (expression)]
    $default  reduce using rule 11 (expression)
